# rune

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md  patch.py  patch2.py  restart.sh  rune.example.toml  task-4-report.md
.github/workflows/: ci.yml  container.yml  pages.yml
.rune/: rune.toml
.rune/runes/weather_open_meteo/: run.sh
.rune/runes/weather_openweather/: run.sh
.rune/runes/weather_wttr/: run.sh
docker/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.ubuntu  docker-entrypoint.sh
docs/: index.html  runes.js  style.css
docs/superpowers/plans/: 2026-06-08-context-tokens-history.md  2026-06-16-github-oauth.md  2026-06-18-custom-note-emoji-icon.md  2026-06-18-popover-emoji-picker.md  2026-06-19-loop-goal.md  2026-06-24-hide-context-overlay.md  2026-06-24-loop-branch-cleanup.md
docs/superpowers/specs/: 2026-06-08-context-tokens-history-design.md  2026-06-18-custom-note-icon-design.md  2026-06-18-loop-goal-design.md  2026-06-18-popover-emoji-picker-design.md  2026-06-24-hide-context-overlay-design.md  2026-06-24-loop-branch-cleanup-design.md
src/: dns_filter.c  main.rs  precommands.rs  setup.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/concourse/: mod.rs
src/config/: mod.rs
src/embedding/: mod.rs
src/loop_engine/: mod.rs  state.rs  tests.rs  worktree.rs
src/mcp/: mod.rs
src/provider/: mod.rs
src/provider/multi_endpoint/: anthropic_messages.rs  dispatcher.rs  mod.rs  responses_api.rs
src/sandbox/: landlock.rs  mod.rs  mod.rs.patch  net_guard.rs  seccomp.rs
src/serve/: api.rs  db.rs  mod.rs  oauth.rs  static_files.rs  ws.rs
src/skills/: mod.rs
src/tools/: mod.rs
src/trace/: mod.rs
tests/: e2e.sh  marked_lines.test.js  mock_mcp_server.sh  public_preview.js  routing_smoke.js  ws_e2e.py
web/: app.js  codemirror-modes.min.js  highlight.min.js  index.html  katex.min.css  login.html  style.css
