[package]
name = "rune"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fourdollars/rune"
homepage = "https://fourdollars.github.io/rune/"
license = "MIT"
description = "High-performance zero-trust AI Agent"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
indicatif = "0.18"
rustyline = "18"
libc = "0.2"
