[package]
name = "rune"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fourdollars/rune"
homepage = "https://fourdollars.github.io/rune/"
license = "MIT"
description = "High-performance zero-trust AI Agent"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process", "sync", "io-util", "io-std", "net", "macros", "signal"] }
indicatif = "0.18"
rustyline = "18"
libc = "0.2"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "rustls", "charset", "http2"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
base64 = "0.22"
sha2 = "0.11.0"
hex = "0.4.3"
axum = "0.8"

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link-Time Optimization (thin → full)
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # No unwinding tables
strip = true          # Strip symbols automatically

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
